# WEB-AGENT

./: .env.example  CMakeLists.txt  DOCS.md  LICENCE  README.md  README.md:Zone.Identifier  agent.h  config.json  main.cpp  polling.cpp  result_sender.cpp  web_agent
.github/workflows/: release.yml
WebAgent/: web_agent
WebAgent/assets/: config.json
WebAgent/src/: polling.cpp:Zone.Identifier  result_sender.cpp
assets/: config.json
config/: agent.conf
include/: agent.h  thread_pool.h
include/agent/: Config.h  HttpClient.h  Logger.h  StateMachine.h  TaskDispatcher.h
src/: Config.cpp  main.cpp  polling.cpp  result_sender.cpp
